# Telemetry-Pipeline

./: .env.example  .gitignore  FRONTEND_PLAN.md  Plan.md  README.md  USE_CASES.md  benchmark_report.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: pipeline.docker.yaml  pipeline.k8s.yaml  pipeline.load.yaml  pipeline.yaml
config/schemas/: sensor_event.json
data/sample/: nab_sample.csv  pump_sample.csv
docker/: Dockerfile  Dockerfile.frontend  Dockerfile.simulator  healthcheck-pipeline.sh  healthcheck-simulator.sh  init-timescale.sql  prometheus.yml
docker/clickhouse/: init.sql
docker/grafana/: Dockerfile  grafana.ini  signal-theme.css
docker/promtail/: promtail-config.yml
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  (+1 more)
k8s/: README.md  ingress.yaml  kafka-init-job.yaml  kustomization.yaml  load-test-job.yaml  namespace.yaml  pipeline-deployment.yaml  pipeline-hpa.yaml  pipeline-service.yaml  redpanda.yaml  secret.example.yaml  simulator-deployment.yaml  timescaledb.yaml  victoriametrics.yaml
scripts/: helm-lint.sh  run-load-test.sh  smoke_test.sh
tests/: conftest.py  test_alerting.py  test_anomaly.py  test_api_security.py  test_autoencoder.py  test_benchmark.py  test_config_validation.py  test_grafana_dashboards.py  test_k8s_security.py  test_kafka_topics.py  test_latency.py  test_load.py  test_load_100k.py  test_ml_eval.py  test_phase2.py  test_pipeline.py  test_processor.py  test_prometheus_tenant.py  test_simulator.py  test_tenancy.py  test_validation.py  test_viz_api.py
(+141 files in other folders)
