[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telemetry-pipeline"
version = "0.1.0"
description = "Modular real-time telemetry processing pipeline with AI anomaly detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "aiokafka>=0.10",
    "aiomqtt>=2.1",
    "websockets>=12.0",
    "asyncpg>=0.29",
    "aiohttp>=3.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "river>=0.21",
    "scikit-learn>=1.4",
    "streamlit>=1.35",
    "structlog>=24.1",
    "httpx>=0.27",
    "uvloop>=0.19; sys_platform != 'win32'",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "onnxruntime>=1.17",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
telemetry-pipeline = "telemetry.main:main"
telemetry-simulator = "telemetry.simulator.generator:main"
telemetry-replay = "telemetry.simulator.replay:main"
telemetry-dashboard = "telemetry.viz.streamlit_app:main"
telemetry-benchmark = "telemetry.benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["src/telemetry"]

[tool.hatch.build.targets.wheel.force-include]
"src/telemetry" = "telemetry"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]